# pyaudacity_noisered

./: CMakeLists.txt  README.md  setup.py
src/: CMakeLists.txt
src/audacity/: BlockFile.cpp  BlockFile.h  CMakeLists.txt  DirManager.cpp  DirManager.h  Dither.cpp  Envelope.cpp  Envelope.h  Export.cpp  Export.h  ExportPCM.cpp  ExportPCM.h  FileException.cpp  FileException.h  FileFormats.cpp  FileFormats.h  ImportPCM.cpp  ImportPCM.h  ImportPlugin.h  InconsistencyException.cpp  InconsistencyException.h  MemoryX.h  Mix.cpp  Mix.h  NoiseReduction.cpp  NoiseReduction.h  ODTaskThread.cpp  ODTaskThread.h  RealFFTf.cpp  RealFFTf.h  Resample.cpp  Resample.h  SampleFormat.cpp  SampleFormat.h  Sequence.cpp  Sequence.h  SilentBlockFile.cpp  SilentBlockFile.h  SimpleBlockFile.cpp  SimpleBlockFile.h  (+15 more)
src/pyaudacity/: CMakeLists.txt  __init__.py  noiseredmodule.cpp
test/: CMakeLists.txt  test_noisered.cpp
test/pyaudacity/: test_noisered.py
